# 3D-heart-models

./: README.md  mat2fem.py  mat2fem.sh  software.sh
Convertion_Process/: Makefile  make_surface.py  make_surface.py~  make_surface_all.sh  make_surface_all.sh~
Convertion_Process/ConvertFile/: CMakeLists.txt  ConvertFile.cxx
ITK/Examples/IO/: ImageReadDicomSeriesWrite.cxx
Manual/: files&folders.md
Matlab_Process/: ChangeReswithBivEpi.m  Data.txt  SaveMhd.m  alignAll.m  alignAllwithBivEpi.m  cleanPointIndices.m  cleanPointIndiceswithBivEpi.m  displaySEGandSCAR.m  displayWithScar.m  logfile.output  notSliceAlignment.m  notTemporalResampleAlignment.m  notTemporalResampleAlignmentwithBivEpi.m  pairwiseAlignment.m  pairwiseAlignmentwithBivEpi.m  run_matlab.sh  sliceAlignmentwithBivEpi.m
Matlab_Process/Bullseye/: SampleBullseye.m  createBullseye.m  fillWedge.m  getWedgeBorder.m
Matlab_Process/Data/: ScarVolume.txt
Medical_Image_Processing_Toolbox/.addOnMetadata/: MedicalImageProcessingToolbox.mltbx
Scar_Process/: run.sh
Scar_Process/ScarProcessing/: CMakeLists.txt  CMakeLists.txt~  ScarProcessing.cxx
gmsh/utils/: svn-commit.tmp
scripts/: base.par  biv_mesh.geo  bz_pacing.py  categorize_pacingsites.py  connect_meshes.py  create_par.py  elemcenters.py  find_coord.py  fix_elem_prelon.sh  fix_vtx.py  generate_regions.py  heart_volume.py  msh2vtk.py  multiply_pts.py  pts_order.py  region_percentage.py  remove_site_times.py  reorder_axis.py  risk_strat_1_16.sh  run.sh  scar_surf.geo  scar_vol.geo  visualize_regions.py  vtx_generation.py  write_fem.py
(+32 files in other folders)
